--- a/BDDCucumber/pom.xml
+++ b/BDDCucumber/pom.xml
@@ -35,6 +35,12 @@
     <version>3.141.59</version>
 </dependency>
   
+<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-testng -->
+<dependency>
+    <groupId>info.cukes</groupId>
+    <artifactId>cucumber-testng</artifactId>
+    <version>1.2.5</version>
+</dependency>
   
   </dependencies>
 </project>
